--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
     <section class="boxes">
         <div class="container">
         <div class="box">
-            <img src="/logo_html.png" alt="image of Html" width="90" height="90">
+            <img src="\logo_html.png" alt="image of Html" width="90" height="90">
             <h3>HTML5 Markup </h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
         </div>
         <div class="box">
-            <img src="/logo_css.png" alt="image of css"width="90" height="90">
+            <img src="\logo_css.png" alt="image of css"width="90" height="90">
             <h3>CSS3 Styling</Style></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
         </div>
         <div class="box">
-            <img src="/logo_brush.png" alt="image of graphic Design"width="90" height="90">
+            <img src="\logo_brush.png" alt="image of graphic Design"width="90" height="90">
             <h3>Graphic Design</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
         </div>
