--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="boxes">
         <div class="container">
         <div class="box">
-            <img src="/logo_html.png" alt="image of Html" width="90" height="90"/>
+            <img src="logo_html.png" alt="image of Html" width="90" height="90"/>
             <h3>HTML5 Markup </h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
         </div>
